# vz

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  VZ-STACK-TESTING-REPORT.md  VZ-STACK-UI-WIREFRAMES.md  opencode.json
crates/: Cargo.toml
crates/vz/: Cargo.toml
crates/vz-agent-loader/: Cargo.toml
crates/vz-agent-loader-client/: Cargo.toml
crates/vz-agent-loader-client/src/: client.rs  lib.rs  protocol.rs
crates/vz-agent-loader/src/: main.rs  vsock.rs
crates/vz-agent-proto/: Cargo.toml  build.rs
crates/vz-agent-proto/proto/: agent.proto  runtime_v2.proto
crates/vz-agent-proto/src/: lib.rs
crates/vz-api/: Cargo.toml  build.rs
crates/vz-api/src/: daemon_bridge.rs  handlers.rs  lib.rs  main.rs  models.rs  observability.rs  openapi_doc.rs  tests.rs
crates/vz-api/src/daemon_bridge/: build.rs  checkpoint.rs  common.rs  container.rs  events.rs  execution.rs  filesystem.rs  images.rs  lease.rs  mod.rs  sandbox.rs  stack.rs
crates/vz-api/tests/: server_smoke.rs
crates/vz-cli/: Cargo.toml
crates/vz-cli/src/: control.rs  gui.rs  ipsw.rs  main.rs  provision.rs  registry.rs  tui.rs
crates/vz-cli/src/commands/: build.rs  build_mgmt.rs  cache.rs  checkpoint.rs  cleanup.rs  debug.rs  dev.rs  dev_init.rs  dev_logs.rs  dev_status.rs  diff.rs  docker.rs  exec.rs  execution.rs  file.rs  image.rs  init.rs  lease.rs  list.rs  mod.rs  oci.rs  provision.rs  restore.rs  rm.rs  run.rs  runtime_daemon.rs  sandbox.rs  save.rs  self_sign.rs  space_cache_key.rs  space_cache_trust.rs  stack.rs  stack_output.rs  stop.rs  validate.rs  vm.rs  vm_base.rs  vm_patch.rs
crates/vz-cli/src/commands/stack/: api.rs  commands.rs  helpers.rs  mod.rs  output.rs  tests.rs
crates/vz-cli/src/commands/vm_patch/: apply.rs  mod.rs  planning.rs  rollback.rs  tests.rs
crates/vz-cli/tests/: api_http_mode_e2e.rs
crates/vz-guest-agent/: Cargo.toml
crates/vz-guest-agent/src/: grpc_server.rs  listener.rs  main.rs  network.rs  process_table.rs
crates/vz-image/: Cargo.toml
crates/vz-image/src/: error.rs  lib.rs  puller.rs  store.rs
crates/vz-linux/: Cargo.toml
crates/vz-linux-native/: Cargo.toml
crates/vz-linux-native/src/: backend.rs  bundle.rs  cgroups.rs  config.rs  error.rs  lib.rs  network.rs  ns.rs  probe.rs  process.rs  runtime.rs
crates/vz-linux/src/: agent.rs  benchmark.rs  config.rs  error.rs  grpc_client.rs  kernel.rs  lib.rs  vm.rs
crates/vz-macos-provision/: Cargo.toml
crates/vz-macos-provision/src/: lib.rs
crates/vz-oci/: Cargo.toml
crates/vz-oci-macos/: Cargo.toml
crates/vz-oci-macos/src/: buildkit.rs  buildkit_rawjson.rs  config.rs  error.rs  lib.rs  macos_backend.rs  runtime.rs
crates/vz-oci-macos/src/buildkit/: artifacts.rs  common.rs  manager.rs  pipeline.rs  proxy.rs  tests.rs
crates/vz-oci-macos/src/runtime/: bundle.rs  exec.rs  mod.rs  networking.rs  oci_lifecycle.rs  resolve.rs  run_rootfs.rs  stack_vm.rs  tests.rs
crates/vz-oci-macos/tests/: buildkit_e2e.rs  runtime_e2e.rs
crates/vz-oci/src/: bundle.rs  config.rs  container_store.rs  error.rs  image.rs  lib.rs  macos_backend.rs  runtime.rs  store.rs
crates/vz-oci/src/buildkit/: artifacts.rs  auth.rs  client.rs  filesync.rs  mod.rs  output.rs  progress.rs  session_tunnel.rs
crates/vz-oci/tests/: runtime_e2e.rs
crates/vz-runtime-contract/: Cargo.toml
crates/vz-runtime-contract/src/: backend.rs  checkpoint.rs  conformance.rs  error.rs  lib.rs  metadata.rs  selection.rs  tests.rs  types.rs
crates/vz-runtime-contract/src/types/: build.rs  checkpoint.rs  container_legacy.rs  events.rs  io.rs  isolation.rs  mod.rs  operations.rs  sandbox.rs  shared_vm.rs  space_cache.rs  space_cache_trust.rs  stack.rs  workload.rs
crates/vz-runtime-proto/: Cargo.toml  build.rs
crates/vz-runtime-proto/proto/: runtime_v2.proto
crates/vz-runtime-proto/src/: lib.rs
crates/vz-runtime-translate/: Cargo.toml
crates/vz-runtime-translate/src/: lib.rs
crates/vz-runtimed/: Cargo.toml
crates/vz-runtimed-client/: Cargo.toml
crates/vz-runtimed-client/src/: build.rs  checkpoint.rs  container.rs  events.rs  execution.rs  files.rs  image.rs  lib.rs  linux_vm.rs  sandbox.rs  stack.rs  stream_completion.rs  tests.rs  transport.rs
crates/vz-runtimed/src/: btrfs_health.rs  btrfs_portability.rs  execution_sessions.rs  grpc.rs  lib.rs  main.rs  placement_scheduler.rs  test_backend.rs
crates/vz-runtimed/src/grpc/: observability.rs  tests.rs
crates/vz-runtimed/src/grpc/handlers/: build.rs  mod.rs  (+12 more)
crates/vz-sandbox/: Cargo.toml
crates/vz-sandbox/src/: channel.rs  error.rs  lib.rs  pool.rs  protocol.rs  session.rs
crates/vz-stack/: Cargo.toml
crates/vz-stack/benches/: state_store_bench.rs
crates/vz-stack/src/: chaos_tests.rs  compose.rs  convert.rs  error.rs  events.rs  executor.rs  health.rs  image_policy.rs  lib.rs  network.rs  orchestrator.rs  reconcile.rs  restart.rs  spec.rs  state_store.rs  volume.rs
crates/vz-stack/src/compose/: env.rs  extensions.rs  fields.rs  helpers.rs  interaction.rs  mod.rs  networks.rs  secrets.rs  security.rs  service.rs  tests.rs  validation.rs  volumes.rs
crates/vz-stack/src/executor/: create.rs  dispatch.rs  mod.rs  remove.rs  tests.rs  tests_support.rs
crates/vz-stack/src/health/: deps.rs  mod.rs  poller.rs  tests.rs
crates/vz-stack/src/reconcile/: mod.rs  planning.rs  tests.rs  topo.rs
crates/vz-stack/src/state_store/: drift.rs  mod.rs  persistence.rs  tests.rs
crates/vz-stack/tests/: backend_conformance.rs  compose_fixtures.rs  executor_e2e.rs  quality_gates.rs  stack_e2e.rs
crates/vz-sys/: Cargo.toml  build.rs
crates/vz-sys/src/: lib.rs
crates/vz-validation/: Cargo.toml
crates/vz-validation/src/: cohort.rs  lib.rs  manifest.rs  oci_adapter.rs  report.rs  runner.rs  scenario.rs  stress.rs
crates/vz/src/: bridge.rs  channel.rs  config.rs  error.rs  install.rs  lib.rs  machine_identifier.rs  protocol.rs  virtio_fs.rs  vm.rs  vsock.rs
crates/vz/tests/: balloon_inflate_test.rs  balloon_kernel_probe_test.rs  balloon_test.rs  bridge_test.rs  config_test.rs  error_test.rs  install_test.rs  memory_footprint_test.rs  state_test.rs  vsock_test.rs
(+160 files in other folders)
