[package]
name = "vz-agent-loader"
version = "0.1.0"
description = "Minimal bootstrap loader for macOS/Linux VMs — starts and supervises guest agent binaries over vsock"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vz-agent-loader-client = { workspace = true }

[lints]
workspace = true
