[package]
name = "vz-api"
version = "0.1.0"
description = "OpenAPI + SSE/WebSocket transport adapter for Runtime V2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
vz-runtime-contract = { workspace = true }
vz-stack = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
vz-agent-proto = { workspace = true }

[lints]
workspace = true
