[package]
name = "vz-api"
version = "0.1.0"
description = "OpenAPI + SSE/WebSocket transport adapter for Runtime V2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
vz-runtime-contract = { workspace = true }
vz-stack = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
vz-agent-proto = { workspace = true }

[lints]
workspace = true
