[package]
name = "vz-api"
version = "0.1.0"
description = "OpenAPI + SSE/WebSocket transport adapter for Runtime V2"
build = "build.rs"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
base64 = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
utoipa = { version = "5.4", features = ["axum_extras"] }
vz-runtime-contract = { workspace = true }
vz-runtime-proto = { workspace = true }
vz-runtimed-client = { workspace = true }
vz-stack = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
vz-agent-proto = { workspace = true }
vz-runtimed = { workspace = true }

[lints]
workspace = true
