[package]
name = "vz-cli"
version = "0.1.0"
description = "CLI for managing containers and macOS VM sandboxes"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vz"
path = "src/main.rs"

[dependencies]
# Cross-platform dependencies
vz-stack = { workspace = true }
vz-runtime-contract = { workspace = true }
vz-image = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
ctrlc = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
vz-sandbox = { workspace = true }
vz = { workspace = true }
vz-linux = { workspace = true }
vz-oci-macos = { workspace = true }
vz-validation = { workspace = true, features = ["oci"] }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-virtualization = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
vz-linux-native = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
