[package]
name = "vz-cli"
version = "0.3.14"
description = "CLI for managing containers and macOS VM sandboxes"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vz"
path = "src/main.rs"

[dependencies]
# Cross-platform dependencies
vz-stack = { workspace = true }
vz-runtime-contract = { workspace = true }
vz-runtime-proto = { workspace = true }
vz-image = { workspace = true }
vz-runtimed-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }
ctrlc = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tonic = { workspace = true }
shell-words = { workspace = true }
sha2 = { workspace = true }
ring = "0.17.14"
vz-macos-provision = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
vz-sandbox = { workspace = true }
vz = { workspace = true }
vz-linux = { workspace = true }
vz-oci-macos = { workspace = true }
vz-validation = { workspace = true, features = ["oci"] }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
objc2-virtualization = { workspace = true }
tokio-stream = { workspace = true }
tar = "0.4"
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
vz-linux-native = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
axum = "0.8"
portable-pty = { workspace = true }
vz-api = { workspace = true }
vz-runtimed = { workspace = true }

[lints]
workspace = true
