[package]
name = "vz-guest-agent"
version = "0.1.0"
description = "Guest agent binary for vz macOS VM sandbox"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vz-guest-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }

# Reuse protocol types from vz
vz = { workspace = true }

[lints]
workspace = true
