[package]
name = "vz-guest-agent"
version = "0.1.0"
description = "Guest agent binary for vz macOS VM sandbox"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vz-guest-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
nix = { workspace = true, features = ["term"] }
clap = { workspace = true }

# gRPC
vz-agent-proto = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

# Reuse protocol types from vz (kept for legacy JSON protocol)
vz = { workspace = true }

# JSON parsing for youki state output
serde_json = { workspace = true }

[lints]
workspace = true
