[package]
name = "vz-linux"
version = "0.1.0"
description = "Linux VM bootstrap backend for vz"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vz = { workspace = true }
vz-agent-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
shell-words = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
