[package]
name = "vz-oci"
version = "0.1.0"
description = "OCI runtime backend for vz"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vz = { workspace = true }
vz-linux = { workspace = true }
vz-sandbox = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
oci-distribution = { workspace = true }
oci-spec = { workspace = true }
docker_credential = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
