[package]
name = "vz-oci"
version = "0.1.0"
description = "Platform-agnostic OCI bundle generation and container metadata"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vz-image = { workspace = true }
vz-runtime-contract = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
oci-spec = { workspace = true }
shell-words = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
sha2 = { workspace = true }
flate2 = "1"
tar = "0.4"
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
bollard-buildkit-proto = { version = "=0.6.0", default-features = false }
ignore = "0.4"
docker_credential = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
