[package]
name = "vz-runtimed"
version = "0.1.0"
description = "Runtime V2 control-plane daemon"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-backend = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
shell-words = { workspace = true }
vz-runtime-contract = { workspace = true }
vz-runtime-proto = { workspace = true }
vz-runtime-translate = { workspace = true }
vz-stack = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
vz-oci-macos = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
vz-linux-native = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
hyper-util = { workspace = true, features = ["tokio"] }
tempfile = { workspace = true }

[lints]
workspace = true
