[package]
name = "vz-sandbox"
version = "0.1.0"
description = "High-level macOS VM sandbox for coding agents"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vz = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
shell-words = { workspace = true }

[lints]
workspace = true
