[package]
name = "vz-stack"
version = "0.1.0"
description = "Stack control plane for multi-service OCI workloads"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
