[package]
name = "vz-sys"
version = "0.1.0"
description = "Raw FFI bindings to Apple's Virtualization.framework"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
block2 = { workspace = true }

[lints]
workspace = true

[build-dependencies]
