[package]
name = "vz-validation"
version = "0.1.0"
description = "Validation harness for OCI lifecycle and compose scenario testing"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["oci"]
oci = ["dep:vz-oci-macos", "dep:tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
vz-oci-macos = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
